my-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
  type: LoadBalancer
